--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "我干了什么 究竟拿了时间换了什么"
+description: "来都来了 大过年的 人都死了 都是亲戚 还是孩子"
 ---
 
 {% for post in paginator.posts %}
